# n3xt_crawler_py

./: README.md  pyproject.toml
examples/: example_com_html_default.py  ransomeware_live_xml_tor.py
src/n3xt_crawler_py/data_parser/: crawl_parser.py
src/n3xt_crawler_py/data_processor/: crawl_data_process_manager.py
src/n3xt_crawler_py/utils/: crawl_save.py
src/n3xt_crawler_py/web_crawler/: crawl_client.py  crawl_requester.py  crawl_response.py  crawl_url.py  crawl_xpath.py
tests/: test_crawl_data_requester.py  test_crawl_processor_manager.py  test_crawl_response.py
