[project]
name = "n3xt_crawler_py"
version = "0.1.0"
description = ""
authors = [
    { name = "N3xT97" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests (>=2.32.4,<3.0.0)", "lxml (>=5.4.0,<6.0.0)", "pysocks (>=1.7.1,<2.0.0)"]

[tool.poetry]
packages = [{ include = "n3xt_crawler_py", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
